--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "philosophers.h": "c",
         "get_next_line_bonus.h": "c",
-        "ft_colors.h": "c"
+        "ft_colors.h": "c",
+        "stdio.h": "c",
+        "pthread.h": "c"
     }
 }
